<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PresidentVotingWaitingRoomActivity">

    <TextView
        android:id="@+id/votingStatusForPresidentTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:gravity="center"
        android:text="@string/presidentWaitingRoom_status"
        app:layout_constraintBottom_toTopOf="@+id/presidentAdvanceBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/presidentAdvanceBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/presidentWaitingRoom_advance_Btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/presidentVoteYesBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/presidentWaitingRoom_ja_Btn"
        app:layout_constraintBottom_toTopOf="@+id/presidentAdvanceBtn"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/presidentVoteNoBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/presidentWaitingRoom_nein_Btn"
        app:layout_constraintBottom_toTopOf="@+id/presidentAdvanceBtn"
        app:layout_constraintEnd_toEndOf="parent" />
</android.support.constraint.ConstraintLayout>