<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChancellorPickLawActivity">

    <ImageButton
        android:id="@+id/chancellorFirstLawImgBtn"
        android:layout_width="100dp"
        android:layout_height="130dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/chancellorLaw_first_imgBtn"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fascist_law" />

    <ImageButton
        android:id="@+id/chancellorSecondLawImgBtn"
        android:layout_width="100dp"
        android:layout_height="130dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/chancellorLaw_second_imgBtn"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/liberal_law" />

    <TextView
        android:id="@+id/chancellorLawHintTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/chancellorLaw_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>