<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PresidentSelectLawsActivity">

    <ImageButton
        android:id="@+id/presidentFirstLawImgBtn"
        android:layout_width="100dp"
        android:layout_height="130dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/presSelectLaw_first_imgBtn"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/presidentSecondLawImgBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fascist_law" />

    <ImageButton
        android:id="@+id/presidentSecondLawImgBtn"
        android:layout_width="100dp"
        android:layout_height="130dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/presSelectLaw_second_imgBtn"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/presidentThirdLawImgBtn"
        app:layout_constraintStart_toEndOf="@+id/presidentFirstLawImgBtn"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/liberal_law" />

    <ImageButton
        android:id="@+id/presidentThirdLawImgBtn"
        android:layout_width="100dp"
        android:layout_height="130dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/presSelectLaw_third_imgBtn"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/presidentSecondLawImgBtn"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fascist_law" />

    <TextView
        android:id="@+id/presidentChooseLawsTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/presSelectLaw_hint"
        app:layout_constraintBottom_toTopOf="@+id/presidentSecondLawImgBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>